@@ -1,7 +1,7 @@
 /*
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  *
- * Copyright (c) 1997-2010 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1997-2012 Oracle and/or its affiliates. All rights reserved.
  *
  * The contents of this file are subject to the terms of either the GNU
  * General Public License Version 2 only ("GPL") or the Common Development
@@ -58,14 +58,14 @@ public final class FlagTerm extends SearchTerm {
      *
      * @serial
      */
-    protected boolean set;
+    private boolean set;
 
     /**
      * Flags object containing the flags to test.
      *
      * @serial
      */
-    protected Flags flags;
+    private Flags flags;
 
     private static final long serialVersionUID = -142991500302030647L;
 
